// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application Resolver Correctly Resolves Application Query 1`] = `
Object {
  "data": Object {
    "applications": Array [
      Object {
        "_uid": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "dashboard": null,
        "hubChannels": Array [
          Object {
            "_gitbranch": "master",
            "_gitcommit": "d67d8e10dcfa41dddcac14952e9872e1dfece06f",
            "_gitpath": "helloworld",
            "_uid": "local-cluster/233dfffd-f421-44ee-811b-7f3352b2d728",
            "name": "sub1",
            "namespace": "default",
            "pathname": "https://github.com/fxiang1/app-samples.git",
            "type": "Git",
          },
          Object {
            "_uid": "local-cluster/6c8dcb97-5e6e-4606-9b55-ae3eb05fcfb5",
            "name": "sub2",
            "namespace": "default",
            "pathname": "sample-ns",
            "type": "Namespace",
          },
          Object {
            "_uid": "local-cluster/233dfffd-f421-44ee-811b-7f3352b2d728",
            "name": "sub3",
            "namespace": "default",
            "package": "application-chart",
            "packageFilterVersion": "2.2.0",
            "pathname": "http://multiclusterhub-repo.open-cluster-management.svc.cluster.local:3000/charts",
            "type": "HelmRepo",
          },
        ],
        "hubSubscriptions": Array [
          Object {
            "_uid": null,
            "channel": null,
            "localPlacement": false,
            "status": null,
            "timeWindow": null,
          },
          Object {
            "_uid": null,
            "channel": null,
            "localPlacement": false,
            "status": null,
            "timeWindow": null,
          },
          Object {
            "_uid": null,
            "channel": null,
            "localPlacement": false,
            "status": null,
            "timeWindow": null,
          },
        ],
        "labels": Array [],
        "name": null,
        "namespace": null,
        "selfLink": null,
      },
      Object {
        "_uid": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "dashboard": null,
        "hubChannels": Array [
          Object {
            "_gitbranch": "master",
            "_gitcommit": "d67d8e10dcfa41dddcac14952e9872e1dfece06f",
            "_gitpath": "helloworld",
            "_uid": "local-cluster/233dfffd-f421-44ee-811b-7f3352b2d728",
            "name": "sub1",
            "namespace": "default",
            "pathname": "https://github.com/fxiang1/app-samples.git",
            "type": "Git",
          },
          Object {
            "_uid": "local-cluster/6c8dcb97-5e6e-4606-9b55-ae3eb05fcfb5",
            "name": "sub2",
            "namespace": "default",
            "pathname": "sample-ns",
            "type": "Namespace",
          },
          Object {
            "_uid": "local-cluster/233dfffd-f421-44ee-811b-7f3352b2d728",
            "name": "sub3",
            "namespace": "default",
            "package": "application-chart",
            "packageFilterVersion": "2.2.0",
            "pathname": "http://multiclusterhub-repo.open-cluster-management.svc.cluster.local:3000/charts",
            "type": "HelmRepo",
          },
        ],
        "hubSubscriptions": Array [
          Object {
            "_uid": null,
            "channel": null,
            "localPlacement": false,
            "status": null,
            "timeWindow": null,
          },
          Object {
            "_uid": null,
            "channel": null,
            "localPlacement": false,
            "status": null,
            "timeWindow": null,
          },
          Object {
            "_uid": null,
            "channel": null,
            "localPlacement": false,
            "status": null,
            "timeWindow": null,
          },
        ],
        "labels": Array [],
        "name": null,
        "namespace": null,
        "selfLink": null,
      },
    ],
  },
}
`;

exports[`Application Resolver Correctly Resolves Single Application 1`] = `
Object {
  "data": Object {
    "applications": Array [],
  },
}
`;

exports[`Application Resolver Ignores filters when only name or namespace is passed. 1`] = `
Object {
  "data": Object {
    "applications": Array [
      Object {
        "_uid": null,
        "name": null,
      },
      Object {
        "_uid": null,
        "name": null,
      },
    ],
  },
}
`;

exports[`Channel Resolver Correctly Resolves Channels Query 1`] = `
Object {
  "data": Object {
    "channels": Array [
      Object {
        "_uid": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "localPlacement": true,
        "name": null,
        "namespace": null,
        "pathname": null,
        "selfLink": null,
        "subscriptionCount": 0,
        "type": null,
      },
      Object {
        "_uid": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "localPlacement": true,
        "name": null,
        "namespace": null,
        "pathname": null,
        "selfLink": null,
        "subscriptionCount": 0,
        "type": null,
      },
    ],
  },
}
`;

exports[`Channel Resolver Correctly Resolves Single Channel 1`] = `
Object {
  "data": Object {
    "channels": Array [],
  },
}
`;

exports[`Channel Resolver Ignores filters when only name or namespace is passed. 1`] = `
Object {
  "data": Object {
    "channels": Array [
      Object {
        "_uid": null,
        "name": null,
      },
      Object {
        "_uid": null,
        "name": null,
      },
    ],
  },
}
`;

exports[`Placement Rule Resolver Correctly Resolves Placement Rules Query 1`] = `
Object {
  "data": Object {
    "placementRules": Array [
      Object {
        "_uid": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "name": null,
        "namespace": null,
        "replicas": null,
        "selfLink": null,
      },
      Object {
        "_uid": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "name": null,
        "namespace": null,
        "replicas": null,
        "selfLink": null,
      },
    ],
  },
}
`;

exports[`Placement Rule Resolver Correctly Resolves Single Placement Rule 1`] = `
Object {
  "data": Object {
    "placementRules": Array [],
  },
}
`;

exports[`Placement Rule Resolver Ignores filters when only name or namespace is passed. 1`] = `
Object {
  "data": Object {
    "placementRules": Array [
      Object {
        "_uid": null,
        "name": null,
      },
      Object {
        "_uid": null,
        "name": null,
      },
    ],
  },
}
`;

exports[`Subscription Resolver Correctly Resolves Single Subscription 1`] = `
Object {
  "data": Object {
    "subscriptions": Array [],
  },
}
`;

exports[`Subscription Resolver Correctly Resolves Subscriptions Query 1`] = `
Object {
  "data": Object {
    "subscriptions": Array [
      Object {
        "_uid": null,
        "appCount": 1,
        "channel": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "localPlacement": false,
        "name": null,
        "namespace": null,
        "selfLink": null,
        "status": null,
        "timeWindow": null,
      },
      Object {
        "_uid": null,
        "appCount": 1,
        "channel": null,
        "clusterCount": Object {
          "localCount": 1,
          "remoteCount": 2,
        },
        "created": null,
        "localPlacement": false,
        "name": null,
        "namespace": null,
        "selfLink": null,
        "status": null,
        "timeWindow": null,
      },
    ],
  },
}
`;

exports[`Subscription Resolver Ignores filters when only name or namespace is passed. 1`] = `
Object {
  "data": Object {
    "subscriptions": Array [
      Object {
        "_uid": null,
        "name": null,
      },
      Object {
        "_uid": null,
        "name": null,
      },
    ],
  },
}
`;
